Fixed Blog Post Alignments
Updated Blog Website

--- a/Blog Website/css/style.css
+++ b/Blog Website/css/style.css
@@ -23,6 +23,8 @@ div#container{
 }
 
 header#blog-head{
+    display: flex;
+    justify-content: center;
     width:100%;
     height:300px; 
     font-family: sans-serif;
@@ -30,9 +32,12 @@ header#blog-head{
     text-align: center;
 }
 
-h1{
-color:aliceblue;
+header h1{
+    align-self: center;
+    color:aliceblue;
 }
+
+
 
 /* Blog Post */
 div#blog-post{
@@ -47,6 +52,7 @@ div#blog-post{
 }
 
 img#post-img{
+    align-self: flex-start;
     display:block;
     width:150px;
     height:150px;
@@ -54,21 +60,27 @@ img#post-img{
     background-color: #79a0c7;
     border:
 }
-
-
-
-
-
-h3{
-    color: aliceblue;
+div#post-body{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin:0 5px;
+    font-family: 'Cabin', sans-serif;
 }
 
-p{
+p#post-text{
+    font-size: 1.15em;
     color:aliceblue;
 }
 
-h5{
-    color: aliceblue;
+h3#post-title{
+    align-self: auto;
+    color:#dcf0ff;
+    font-size: 1.5em;
+}
+
+h5#post-stamp{
+    color:aliceblue;
 }
 
 footer{
